request #15100 Fix overflow issues in widgets

--- a/plugins/label/themes/BurningParrot/css/_label.scss
+++ b/plugins/label/themes/BurningParrot/css/_label.scss
@@ -7,6 +7,7 @@
 .labeled-items-list {
     display: flex;
     flex-direction: column;
+    margin: 0 (-$tlp-medium-spacing);
 
     > .labeled-items-error {
         margin: 0 $tlp-medium-spacing $tlp-medium-spacing;
@@ -36,6 +37,10 @@
         .labeled-item-metadata {
             display: flex;
         }
+    }
+
+    &:last-child {
+        border: 0;
     }
 }
 
