--- a/src/themes/BurningParrot/css/dashboards/includes/_dashboard-widgets.scss
+++ b/src/themes/BurningParrot/css/dashboards/includes/_dashboard-widgets.scss
@@ -74,8 +74,6 @@
 }
 
 .dashboard-widget-content {
-    margin: $tlp-medium-spacing;
-    padding: 0;
     overflow-x: auto;
     overflow-y: hidden;
 }
